# cleytin_hello_world

./: CMakeLists.txt  README.md  sdkconfig  storage.json  storage.py
components/cleytin_commons/: CMakeLists.txt  cleytin_commons.cpp
components/cleytin_commons/include/: cleytin_commons.h
components/cleytin_engine/: CMakeLists.txt  ce_8x12_font.cpp  ce_bitmap.cpp  ce_canvas.cpp  ce_canvas_tftlcd_320x240.cpp  ce_circle.cpp  ce_colorful_bitmap.cpp  ce_container.cpp  ce_font.cpp  ce_menu_helper.cpp  ce_rectangle.cpp  ce_text.cpp  cleytin_controls.cpp  cleytin_engine.cpp  cleytin_sdcard.cpp  cleytin_tftlcd_api.cpp
components/cleytin_engine/include/: ce_8x12_font.h  ce_bitmap.h  ce_canvas.h  ce_canvas_tftlcd_320x240.h  ce_circle.h  ce_colorful_bitmap.h  ce_container.h  ce_font.h  ce_menu_helper.h  ce_rectangle.h  ce_text.h  cleytin_controls.h  cleytin_engine.h  cleytin_sdcard.h  cleytin_tftlcd_api.h
main/: CMakeLists.txt  main.cpp
main/fase_1/: fase1.cpp  hello_world.cpp  text_title.cpp
main/include/: fase1.h  hello_world.h  text_title.h
